--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DBConnection": "server=localhost;database=basa1;user=dbadmin;password=Belgium1910"
+    "DBConnection": "***"
   },
   "file_path": "e:\\servapi\\files\\",
   "device_path" : "e:\\servapi\\devices\\",
